project (awesomium)

SET (AWESOMIUM_DIR ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${AWESOMIUM_DIR}/include)
LINK_DIRECTORIES (${AWESOMIUM_DIR}/lib)

SET(AWESOMIUM_LIBRARIES
	${AWESOMIUM_DIR}/lib/awesomium.lib
)

ADD_LIBRARY (awesomium INTERFACE)
TARGET_INCLUDE_DIRECTORIES(awesomium INTERFACE ${AWESOMIUM_DIR}/include)
TARGET_LINK_LIBRARIES (awesomium INTERFACE ${AWESOMIUM_LIBRARIES})